Colaboratory를 통해 생성됨

--- a/Dacon/2021_6_25_Artificial_Intelligence_Bit_Trader_Competition_Season_3.ipynb
+++ b/Dacon/2021_6_25_Artificial_Intelligence_Bit_Trader_Competition_Season_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO9rjrzw9wpqC1Umnk/+Py0",
+      "authorship_tag": "ABX9TyNqqYCwOP7lK/9H+zqr88Wy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Artificial_Intelligence_Bit_Trader_Competition_Season_3"
+        "# Artificial_Intelligence_Bit_Trader_Competition_Season_3\n",
+        "***https://www.dacon.io/competitions/official/235740/overview/description***"
       ],
       "metadata": {
         "id": "cp9AmH_EQmri"
